@@ -1,19 +1,20 @@
 /*
  * ============LICENSE_START=======================================================
  *  Copyright (C) 2016-2018 Ericsson. All rights reserved.
+ *  Modifications Copyright (C) 2020 Nordix Foundation.
  * ================================================================================
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- * 
+ *
  * SPDX-License-Identifier: Apache-2.0
  * ============LICENSE_END=========================================================
  */
@@ -29,10 +30,6 @@ import javax.persistence.Table;
 import javax.xml.bind.annotation.XmlElement;
 import javax.xml.bind.annotation.adapters.XmlJavaTypeAdapter;
 
-import org.onap.policy.apex.model.basicmodel.concepts.AxConcept;
-import org.onap.policy.apex.model.basicmodel.concepts.AxKey;
-import org.onap.policy.apex.model.basicmodel.concepts.AxReferenceKey;
-import org.onap.policy.apex.model.basicmodel.concepts.AxValidationResult;
 import org.onap.policy.apex.model.basicmodel.xml.AxReferenceKeyAdapter;
 
 @Entity
@@ -63,10 +60,12 @@ public class DummyEntity extends AxConcept {
         this.doubleValue = doubleValue;
     }
 
+    @Override
     public AxReferenceKey getKey() {
         return key;
     }
 
+    @Override
     public List<AxKey> getKeys() {
         return Arrays.asList((AxKey) getKey());
     }
@@ -172,7 +171,7 @@ public class DummyEntity extends AxConcept {
             return key.compareTo(other.key);
         }
         if (doubleValue != other.doubleValue) {
-            return new Double(doubleValue).compareTo(other.doubleValue);
+            return Double.valueOf(doubleValue).compareTo(other.doubleValue);
         }
 
         return 0;
